# security_project

./: README.md  pyproject.toml
security_project/: main.py
security_project/tools/: anomaly_detection.py  dashboard.py  data_processing.py  log_ingestor.py  log_parser.py  ml.py  real_time_monitor.py  visualizer.py
