[tool.poetry]
name = "security-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
jupyter = "^1.1.1"
watchdog = "^6.0.0"
scikit-learn = "^1.5.2"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
